# python-cmdb

./: .env  .env.example  .gitignore  API_STRUCTURE.md  CASBIN_USAGE_GUIDE.md  CORS_SETUP_GUIDE.md  DATABASE_CASBIN_GUIDE.md  Dockerfile  README.md  alembic.ini  casbin_model_init.sql  pyproject.toml  requirements.txt  role_control_demo.md  run.py
app/: __init__.py  main.py
app/api/: deps.py  middleware.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  casbin.py  casbin_model.py  menus.py  roles.py  users.py
app/core/: config.py  logging.py  rbac_policy.csv  security.py
app/database/: __init__.py  import_rbac_policy_csv.py  init_db.py  init_menus.py  init_roles_permissions.py  redis.py  session.py
app/database/migrations/: env.py  script.py.mako
app/database/migrations/versions/: .gitkeep  0fcacaa6cba2_add_created_at_and_updated_at_to_users.py  2526fbf0a53a_add_menu_table.py  7d8dc00eb31f_remove_role_table_use_casbin_only.py  8b4a75be4a4b_remove_menus_and_permissions.py  98252fef952c_merge_heads.py  a7f23d764d38_init.py  ac7b756b7e58_add_is_verified_to_users.py  add_casbin_model_table.py  change_users_id_to_uuid.py  (+2 more)
app/models/: __init__.py  asset.py  casbin_model.py  permission.py  role.py  user.py
app/models/casbin/: casbin_model.py
app/schemas/: asset.py  auth.py  menu.py  role.py  user.py
app/services/: auth.py  casbin_enforcer.py  casbin_model_service.py  casbin_service.py  menu.py  permission.py  role.py  s3_service.py  user.py
app/users/: manager.py  models.py
scripts/: init_admin_casbin_policy.sql  insert_admin.sql  recreate_cmdb_db.sql
