[project]
name = "python-cmdb"
version = "0.1.0"
description = "FastAPI based CMDB"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt==4.0.1",
    "boto3>=1.37.28",
    "fastapi[standard]>=0.115.12",
    "jose>=1.0.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "pymysql>=1.1.1",
    "python-jose>=3.4.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
